# load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "nodejs_test")
load("@npm//@vue/cli-service:index.bzl", "vue_cli_service")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "src",
    srcs = glob(["src/**/**"]),
)

filegroup(
    name = "static",
    srcs = glob(["static/**/**"]),
)

filegroup(
    name = "configs",
    srcs = glob(["*.config.js"]),
)

decrypto_app_contents = [
    ":configs",
    ":package.json",
    ":src",
    ":static",
    "//rust:decrypto_wasm",
]

vue_cli_service(
    name = "serve",
    args = [
        "serve",
        "www/src/main.js"
    ],
    data = decrypto_app_contents,
)

vue_cli_service(
    name = "build",
    outs = ["dist"],
    args = [
        "build",
        "--dest",
        "$(@D)/dist",
        "--skip-plugins",
        "eslint",
        "www/src/main.js",
    ],
    data = decrypto_app_contents + [
        "@npm//@vue/cli-plugin-babel",
        "@npm//vue",
        # Shouldn't be needed since it's in skip-plugins ?
        # "@npm//@vue/cli-plugin-eslint",
    ],
)
